# loci

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/admin/: router.py
backend/app/core/config/: __init__.py
backend/app/core/errors/: __init__.py
backend/app/core/security/: geo.py  idempotency.py  jwt.py  rate_limit.py  telegram.py  text.py  tokens.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  bookmark.py  category.py  comment.py  photo.py  reaction.py  refresh_token.py  report.py  story.py  user.py
backend/app/db/repositories/: bookmarks.py  categories.py  comments.py  photos.py  reactions.py  refresh_tokens.py  reports.py  stories.py  users.py
backend/app/integrations/: redis.py  storage.py
backend/app/modules/auth/: schemas.py  service.py
backend/app/modules/moderation/: __init__.py
backend/app/modules/notifications/: __init__.py
backend/app/modules/reports/: __init__.py
backend/app/modules/stories/: interactions.py  map_clusters.py  photos.py  schemas.py  service.py
backend/app/workers/: bot.py  celery_app.py  tasks.py
backend/scripts/: seed_global_stories.py
backend/tests/: conftest.py  factories.py  test_auth_endpoints.py  test_config.py  test_geo_fuzz.py  test_interactions_api.py  test_map_clusters.py  test_moderation_api.py  test_photos.py  test_stories_api.py  test_telegram_init_data.py
deploy/: backup.sh  deploy.sh  (+4 more)
(+73 files in other folders)
