[project]
name = "loci-backend"
version = "0.1.0"
description = "Loci FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "geoalchemy2>=0.15.2",
  "greenlet>=3.1.1",
  "minio>=7.2.10",
  "PyJWT>=2.9.0",
  "pydantic-settings>=2.5.2",
  "python-multipart>=0.0.12",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
  "aiogram>=3.0.0",
  "celery[redis]>=5.4.0",
  "httpx>=0.27.2",
  "Pillow>=10.0.0",
  "pillow-heif>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.26.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
